--- a/192/index.html
+++ b/192/index.html
@@ -20,26 +20,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4976da7">1. 笔记</a>
+<li><a href="#orgcecfe29">1. 笔记</a>
 <ul>
-<li><a href="#org825b874">1.1. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgf9eb8cd">1.2. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#org4d580da">1.3. 2023-12-26 (任务)</a></li>
-<li><a href="#orgeeb6b52">1.4. 2023-10-31 (任务)</a></li>
-<li><a href="#org96c6711">1.5. 2023-09-06 (任务)</a></li>
+<li><a href="#orgbb73b3f">1.1. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgdd2b753">1.2. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#orgad105e2">1.3. 2023-12-26 (任务)</a></li>
+<li><a href="#org64a4c8c">1.4. 2023-10-31 (任务)</a></li>
+<li><a href="#org16fdc68">1.5. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
-<li><a href="#orgccc0350">2. 练习题</a>
+<li><a href="#org7ac10f0">2. 练习题</a>
 <ul>
-<li><a href="#org9efd179">2.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
+<li><a href="#org4d18255">2.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
 </ul>
 </li>
-<li><a href="#orgd2ea087">3. 知识点</a>
+<li><a href="#org47c88af">3. 知识点</a>
 <ul>
-<li><a href="#orgfcdfd79">3.1. 将 string 转换为 double 有哪些方式?</a></li>
+<li><a href="#org2d01e22">3.1. 将 string 转换为 double 有哪些方式?</a></li>
 </ul>
 </li>
-<li><a href="#org835e0ff">4. 任务结果</a></li>
+<li><a href="#org366482f">4. 任务结果</a></li>
 </ul>
 </div>
 </nav>
@@ -49,12 +49,12 @@
 </ul>
 
 
-<section id="outline-container-org4976da7" class="outline-2">
-<h2 id="org4976da7"><span class="section-number-2">1.</span> 笔记</h2>
+<section id="outline-container-orgcecfe29" class="outline-2">
+<h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org825b874" class="outline-3">
-<h3 id="org825b874"><span class="section-number-3">1.1.</span> 2024-01-16 (寒假作业)</h3>
+<div id="outline-container-orgbb73b3f" class="outline-3">
+<h3 id="orgbb73b3f"><span class="section-number-3">1.1.</span> 2024-01-16 (寒假作业)</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 C/S架构编程，做完第一章所有的上机题:
@@ -66,8 +66,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-orgf9eb8cd" class="outline-3">
-<h3 id="orgf9eb8cd"><span class="section-number-3">1.2.</span> 2024-01-16 (期末成绩)</h3>
+<div id="outline-container-orgdd2b753" class="outline-3">
+<h3 id="orgdd2b753"><span class="section-number-3">1.2.</span> 2024-01-16 (期末成绩)</h3>
 <div class="outline-text-3" id="text-1-2">
 <table>
 
@@ -487,8 +487,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-org4d580da" class="outline-3">
-<h3 id="org4d580da"><span class="section-number-3">1.3.</span> 2023-12-26 (任务)</h3>
+<div id="outline-container-orgad105e2" class="outline-3">
+<h3 id="orgad105e2"><span class="section-number-3">1.3.</span> 2023-12-26 (任务)</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
@@ -496,8 +496,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-orgeeb6b52" class="outline-3">
-<h3 id="orgeeb6b52"><span class="section-number-3">1.4.</span> 2023-10-31 (任务)</h3>
+<div id="outline-container-org64a4c8c" class="outline-3">
+<h3 id="org64a4c8c"><span class="section-number-3">1.4.</span> 2023-10-31 (任务)</h3>
 <div class="outline-text-3" id="text-1-4">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
@@ -505,8 +505,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </div>
 
-<div id="outline-container-org96c6711" class="outline-3">
-<h3 id="org96c6711"><span class="section-number-3">1.5.</span> 2023-09-06 (任务)</h3>
+<div id="outline-container-org16fdc68" class="outline-3">
+<h3 id="org16fdc68"><span class="section-number-3">1.5.</span> 2023-09-06 (任务)</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
@@ -516,12 +516,12 @@ C/S架构编程，做完第一章所有的上机题:
 </section>
 
 
-<section id="outline-container-orgccc0350" class="outline-2">
-<h2 id="orgccc0350"><span class="section-number-2">2.</span> 练习题</h2>
+<section id="outline-container-org7ac10f0" class="outline-2">
+<h2 id="org7ac10f0"><span class="section-number-2">2.</span> 练习题</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org9efd179" class="outline-3">
-<h3 id="org9efd179"><span class="section-number-3">2.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
+<div id="outline-container-org4d18255" class="outline-3">
+<h3 id="org4d18255"><span class="section-number-3">2.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
 <div class="outline-text-3" id="text-2-1">
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #5317ac;">using</span> <span style="color: #00538b;">System</span>;
@@ -600,20 +600,100 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <details><summary>点击查看答案，仅供参考</summary>
-<p>
-TODO
-</p>
+<div class="org-src-container">
+<pre class="src src-csharp"><span class="linenr"> 1: </span><span style="color: #5317ac;">using</span> <span style="color: #00538b;">System</span>;
+<span class="linenr"> 2: </span>
+<span class="linenr"> 3: </span><span style="color: #5317ac;">class</span> <span style="color: #005a5f;">Program</span>
+<span class="linenr"> 4: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 5: </span>    <span style="color: #5317ac;">static</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Main</span><span style="color: #a8007f;">()</span>
+<span class="linenr"> 6: </span>    <span style="color: #a8007f;">{</span>
+<span class="linenr"> 7: </span>        Console.<span style="color: #721045;">WriteLine</span><span style="color: #005f88;">(</span><span style="color: #2544bb;">"&#27426;&#36814;&#20351;&#29992; BMI &#35745;&#31639;&#22120;&#65281;"</span><span style="color: #005f88;">)</span>;
+<span class="linenr"> 8: </span>
+<span class="linenr"> 9: </span>        <span style="color: #005a5f;">bool</span> <span style="color: #00538b;">run</span> = <span style="color: #0000c0;">true</span>;
+<span class="linenr">10: </span>        <span style="color: #5317ac;">while</span> <span style="color: #005f88;">(</span>run<span style="color: #005f88;">)</span>
+<span class="linenr">11: </span>        <span style="color: #005f88;">{</span>
+<span class="linenr">12: </span>            <span style="color: #505050;">// </span><span style="color: #505050;">&#23450;&#20041;&#21464;&#37327;</span>
+<span class="linenr">13: </span>            <span style="color: #005a5f;">double</span> <span style="color: #00538b;">height</span>, <span style="color: #00538b;">weight</span>;
+<span class="linenr">14: </span>
+<span class="linenr">15: </span>            <span style="color: #505050;">// </span><span style="color: #505050;">&#35835;&#21462;&#36523;&#39640;</span>
+<span class="linenr">16: </span>            <span style="color: #5317ac;">while</span> <span style="color: #904200;">(</span><span style="color: #0000c0;">true</span><span style="color: #904200;">)</span>
+<span class="linenr">17: </span>            <span style="color: #904200;">{</span>
+<span class="linenr">18: </span>                Console.<span style="color: #721045;">Write</span><span style="color: #7f10d0;">(</span><span style="color: #2544bb;">"&#35831;&#36755;&#20837;&#24744;&#30340;&#36523;&#39640;&#65288;&#31859;&#65289;&#65306;"</span><span style="color: #7f10d0;">)</span>;
+<span class="linenr">19: </span>                <span style="color: #5317ac;">if</span> <span style="color: #7f10d0;">(</span><span style="color: #005a5f;">double</span>.<span style="color: #721045;">TryParse</span><span style="color: #006800;">(</span>Console.<span style="color: #721045;">ReadLine</span><span style="color: #b60000;">()</span>, <span style="color: #5317ac;">out</span> <span style="color: #005a5f;">height</span><span style="color: #006800;">)</span> &amp;&amp; height &gt; 0<span style="color: #7f10d0;">)</span>
+<span class="linenr">20: </span>                <span style="color: #7f10d0;">{</span>
+<span class="linenr">21: </span>                    <span style="color: #5317ac;">break</span>;
+<span class="linenr">22: </span>                <span style="color: #7f10d0;">}</span>
+<span class="linenr">23: </span>                <span style="color: #5317ac;">else</span>
+<span class="linenr">24: </span>                <span style="color: #7f10d0;">{</span>
+<span class="linenr">25: </span>                    Console.<span style="color: #721045;">WriteLine</span><span style="color: #006800;">(</span><span style="color: #2544bb;">"&#36755;&#20837;&#30340;&#36523;&#39640;&#26080;&#25928;&#65292;&#35831;&#37325;&#26032;&#36755;&#20837;&#12290;"</span><span style="color: #006800;">)</span>;
+<span class="linenr">26: </span>                <span style="color: #7f10d0;">}</span>
+<span class="linenr">27: </span>            <span style="color: #904200;">}</span>
+<span class="linenr">28: </span>
+<span class="linenr">29: </span>            <span style="color: #505050;">// </span><span style="color: #505050;">&#35835;&#21462;&#20307;&#37325;</span>
+<span class="linenr">30: </span>            <span style="color: #5317ac;">while</span> <span style="color: #904200;">(</span><span style="color: #0000c0;">true</span><span style="color: #904200;">)</span>
+<span class="linenr">31: </span>            <span style="color: #904200;">{</span>
+<span class="linenr">32: </span>                Console.<span style="color: #721045;">Write</span><span style="color: #7f10d0;">(</span><span style="color: #2544bb;">"&#35831;&#36755;&#20837;&#24744;&#30340;&#20307;&#37325;&#65288;&#20844;&#26020;&#65289;&#65306;"</span><span style="color: #7f10d0;">)</span>;
+<span class="linenr">33: </span>                <span style="color: #5317ac;">if</span> <span style="color: #7f10d0;">(</span><span style="color: #005a5f;">double</span>.<span style="color: #721045;">TryParse</span><span style="color: #006800;">(</span>Console.<span style="color: #721045;">ReadLine</span><span style="color: #b60000;">()</span>, <span style="color: #5317ac;">out</span> <span style="color: #005a5f;">weight</span><span style="color: #006800;">)</span> &amp;&amp; weight &gt; 0<span style="color: #7f10d0;">)</span>
+<span class="linenr">34: </span>                <span style="color: #7f10d0;">{</span>
+<span class="linenr">35: </span>                    <span style="color: #5317ac;">break</span>;
+<span class="linenr">36: </span>                <span style="color: #7f10d0;">}</span>
+<span class="linenr">37: </span>                <span style="color: #5317ac;">else</span>
+<span class="linenr">38: </span>                <span style="color: #7f10d0;">{</span>
+<span class="linenr">39: </span>                    Console.<span style="color: #721045;">WriteLine</span><span style="color: #006800;">(</span><span style="color: #2544bb;">"&#36755;&#20837;&#30340;&#20307;&#37325;&#26080;&#25928;&#65292;&#35831;&#37325;&#26032;&#36755;&#20837;&#12290;"</span><span style="color: #006800;">)</span>;
+<span class="linenr">40: </span>                <span style="color: #7f10d0;">}</span>
+<span class="linenr">41: </span>            <span style="color: #904200;">}</span>
+<span class="linenr">42: </span>
+<span class="linenr">43: </span>            <span style="color: #505050;">// </span><span style="color: #505050;">&#35745;&#31639;&#24182;&#36755;&#20986; BMI</span>
+<span class="linenr">44: </span>            <span style="color: #005a5f;">double</span> <span style="color: #00538b;">bmi</span> = weight / <span style="color: #904200;">(</span>height * height<span style="color: #904200;">)</span>;
+<span class="linenr">45: </span>            Console.<span style="color: #721045;">Write</span><span style="color: #904200;">(</span>$<span style="color: #2544bb;">"&#24744;&#30340; BMI &#20540;&#20026;&#65306;{bmi}\n"</span><span style="color: #904200;">)</span>;
+<span class="linenr">46: </span>
+<span class="linenr">47: </span>            <span style="color: #505050;">// </span><span style="color: #505050;">&#35745;&#31639;&#36523;&#20307;&#29366;&#20917;</span>
+<span class="linenr">48: </span>            <span style="color: #5317ac;">if</span> <span style="color: #904200;">(</span>bmi &lt; 18.5<span style="color: #904200;">)</span>
+<span class="linenr">49: </span>            <span style="color: #904200;">{</span>
+<span class="linenr">50: </span>                Console.<span style="color: #721045;">WriteLine</span><span style="color: #7f10d0;">(</span><span style="color: #2544bb;">"&#24744;&#30340;&#20307;&#37325;&#36807;&#36731;&#65281;"</span><span style="color: #7f10d0;">)</span>;
+<span class="linenr">51: </span>            <span style="color: #904200;">}</span>
+<span class="linenr">52: </span>            <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #904200;">(</span>bmi &lt; 24<span style="color: #904200;">)</span>
+<span class="linenr">53: </span>            <span style="color: #904200;">{</span>
+<span class="linenr">54: </span>                Console.<span style="color: #721045;">WriteLine</span><span style="color: #7f10d0;">(</span><span style="color: #2544bb;">"&#24744;&#30340;&#20307;&#37325;&#27491;&#24120;&#12290;"</span><span style="color: #7f10d0;">)</span>;
+<span class="linenr">55: </span>            <span style="color: #904200;">}</span>
+<span class="linenr">56: </span>            <span style="color: #5317ac;">else</span> <span style="color: #5317ac;">if</span> <span style="color: #904200;">(</span>bmi &lt; 28<span style="color: #904200;">)</span>
+<span class="linenr">57: </span>            <span style="color: #904200;">{</span>
+<span class="linenr">58: </span>                Console.<span style="color: #721045;">WriteLine</span><span style="color: #7f10d0;">(</span><span style="color: #2544bb;">"&#24744;&#30340;&#20307;&#37325;&#36229;&#37325;&#12290;"</span><span style="color: #7f10d0;">)</span>;
+<span class="linenr">59: </span>            <span style="color: #904200;">}</span>
+<span class="linenr">60: </span>            <span style="color: #5317ac;">else</span>
+<span class="linenr">61: </span>            <span style="color: #904200;">{</span>
+<span class="linenr">62: </span>                Console.<span style="color: #721045;">WriteLine</span><span style="color: #7f10d0;">(</span><span style="color: #2544bb;">"&#24744;&#30340;&#20307;&#37325;&#32933;&#32982;&#65281;"</span><span style="color: #7f10d0;">)</span>;
+<span class="linenr">63: </span>            <span style="color: #904200;">}</span>
+<span class="linenr">64: </span>
+<span class="linenr">65: </span>            Console.<span style="color: #721045;">WriteLine</span><span style="color: #904200;">()</span>;
+<span class="linenr">66: </span>
+<span class="linenr">67: </span>            <span style="color: #505050;">// </span><span style="color: #505050;">&#21028;&#23450;&#26159;&#19981;&#26159;&#32487;&#32493;&#19979;&#19968;&#27425;</span>
+<span class="linenr">68: </span>            Console.<span style="color: #721045;">Write</span><span style="color: #904200;">(</span><span style="color: #2544bb;">"&#26159;&#21542;&#32487;&#32493;&#35745;&#31639;BMI&#65311;&#65288;&#26159;/&#21542;&#65289;&#65306;"</span><span style="color: #904200;">)</span>;
+<span class="linenr">69: </span>            <span style="color: #005a5f;">string</span> <span style="color: #00538b;">input</span> = Console.<span style="color: #721045;">ReadLine</span><span style="color: #904200;">()</span>;
+<span class="linenr">70: </span>
+<span class="linenr">71: </span>            <span style="color: #5317ac;">if</span> <span style="color: #904200;">(</span>input != <span style="color: #2544bb;">"&#26159;"</span><span style="color: #904200;">)</span>
+<span class="linenr">72: </span>            <span style="color: #904200;">{</span>
+<span class="linenr">73: </span>                run = <span style="color: #0000c0;">false</span>;
+<span class="linenr">74: </span>            <span style="color: #904200;">}</span>
+<span class="linenr">75: </span>
+<span class="linenr">76: </span>            Console.<span style="color: #721045;">WriteLine</span><span style="color: #904200;">()</span>;
+<span class="linenr">77: </span>        <span style="color: #005f88;">}</span>
+<span class="linenr">78: </span>    <span style="color: #a8007f;">}</span>
+<span class="linenr">79: </span><span style="color: #000000;">}</span>
+<span class="linenr">80: </span>
+</pre>
+</div>
 </details>
 </div>
 </div>
 </section>
 
-<section id="outline-container-orgd2ea087" class="outline-2">
-<h2 id="orgd2ea087"><span class="section-number-2">3.</span> 知识点</h2>
+<section id="outline-container-org47c88af" class="outline-2">
+<h2 id="org47c88af"><span class="section-number-2">3.</span> 知识点</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-orgfcdfd79" class="outline-3">
-<h3 id="orgfcdfd79"><span class="section-number-3">3.1.</span> 将 string 转换为 double 有哪些方式?</h3>
+<div id="outline-container-org2d01e22" class="outline-3">
+<h3 id="org2d01e22"><span class="section-number-3">3.1.</span> 将 string 转换为 double 有哪些方式?</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 在 C# 中，转换 string 为 double 的方式主要有三种:
@@ -692,10 +772,10 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 </section>
 
-<section id="outline-container-org835e0ff" class="outline-2">
-<h2 id="org835e0ff"><span class="section-number-2">4.</span> 任务结果</h2>
+<section id="outline-container-org366482f" class="outline-2">
+<h2 id="org366482f"><span class="section-number-2">4.</span> 任务结果</h2>
 <div class="outline-text-2" id="text-4">
-<table id="org87961e6">
+<table id="org53e5988">
 
 
 <colgroup>
@@ -713,9 +793,9 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 <tr>
 <th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
-<th scope="col" class="org-left"><a href="#org96c6711">2023-09-06</a></th>
-<th scope="col" class="org-right"><a href="#orgeeb6b52">2023-10-31</a></th>
-<th scope="col" class="org-right"><a href="#org4d580da">2023-12-26</a></th>
+<th scope="col" class="org-left"><a href="#org16fdc68">2023-09-06</a></th>
+<th scope="col" class="org-right"><a href="#org64a4c8c">2023-10-31</a></th>
+<th scope="col" class="org-right"><a href="#orgad105e2">2023-12-26</a></th>
 </tr>
 </thead>
 <tbody>
