--- a/191/index.html
+++ b/191/index.html
@@ -67,16 +67,32 @@
 Winform练习题:
 </p>
 <ol class="org-ol">
-<li>创建一个简单的登录窗体，包含用户名和密码的文本框，以及登录按钮。当用户点击登录按钮时，检查用户名和密码是否正确，并显示相应的提示信息。</li>
-<li>创建一个计算器窗体，包含数字按钮和运算符按钮。当用户点击数字按钮时，在文本框中显示相应的数字。当用户点击运算符按钮时，根据当前显示的数字和运算符进行计算，并在文本框中显示结果。</li>
-<li>创建一个列表窗体，用于显示学生的姓名和成绩。窗体中包含一个添加按钮和一个显示按钮。当用户点击添加按钮时，弹出一个对话框，要求输入学生的姓名和成绩，并将其添加到列表中。当用户点击显示按钮时，在另一个窗体中显示所有学生的姓名和成绩。</li>
-<li>创建一个简单的音乐播放器窗体，包含播放、暂停和停止按钮，以及显示当前播放状态的标签。当用户点击播放按钮时，播放音乐；点击暂停按钮时，暂停音乐；点击停止按钮时，停止音乐。</li>
-<li>创建一个简单的图片浏览器窗体，包含向前、向后按钮和显示当前图片的图片框。当用户点击向前按钮时，显示上一张图片；点击向后按钮时，显示下一张图片。</li>
-<li>创建一个简单的文本编辑器窗体，可以打开和保存文本文件。窗体包含一个文本框用于输入和编辑文本内容，以及打开和保存按钮。当用户点击打开按钮时，弹出一个对话框选择要打开的文本文件，并将其内容显示在文本框中。当用户点击保存按钮时，将文本框中的内容保存到指定的文件中。</li>
-<li>创建一个简单的倒计时器窗体，可以设置倒计时时间，并显示倒计时的剩余时间。窗体包含一个输入框用于设置倒计时时间，一个开始按钮和一个显示剩余时间的标签。当用户点击开始按钮时，开始倒计时，并在标签中显示剩余时间，直到倒计时结束。</li>
-<li>创建一个简单的日历窗体，显示当前日期和时间，并允许用户选择日期。窗体包含一个显示当前日期和时间的标签，以及一个选择日期的日历控件。</li>
-<li>创建一个简单的笔记本应用程序窗体，可以创建、打开和保存笔记。窗体包含一个文本框用于输入和编辑笔记内容，以及新建、打开和保存按钮。当用户点击新建按钮时，清空文本框内容；当用户点击打开按钮时，弹出一个对话框选择要打开的笔记文件，并将其内容显示在文本框中；当用户点击保存按钮时，将文本框中的内容保存到指定的文件中。</li>
-<li>创建一个简单的待办事项列表窗体，可以添加、删除和完成待办事项。窗体包含一个文本框用于输入待办事项，一个添加按钮和一个待办事项列表框。当用户点击添加按钮时，将输入的待办事项添加到列表框中；当用户选中列表框中的待办事项并点击删除按钮时，删除选中的待办事项；当用户选中列表框中的待办事项并点击完成按钮时，将选中的待办事项标记为已完成。</li>
+<li>创建一个简单的登录窗体，包含用户名和密码的文本框，以及登录按钮。
+当用户点击登录按钮时，检查用户名和密码是否正确，并显示相应的提示信息。</li>
+<li>创建一个计算器窗体，包含数字按钮和运算符按钮。当用户点击数字按钮时，在文本框中显示相应的数字。
+当用户点击运算符按钮时，根据当前显示的数字和运算符进行计算，并在文本框中显示结果。</li>
+<li>创建一个列表窗体，用于显示学生的姓名和成绩。窗体中包含一个添加按钮和一个显示按钮。
+当用户点击添加按钮时，弹出一个对话框，要求输入学生的姓名和成绩，并将其添加到列表中。当用户点击显示按钮时，在另一个窗体中显示所有学生的姓名和成绩。</li>
+<li>创建一个简单的音乐播放器窗体，包含播放、暂停和停止按钮，以及显示当前播放状态的标签。
+当用户点击播放按钮时，播放音乐；点击暂停按钮时，暂停音乐；点击停止按钮时，停止音乐。</li>
+<li>创建一个简单的图片浏览器窗体，包含向前、向后按钮和显示当前图片的图片框。
+当用户点击向前按钮时，显示上一张图片；点击向后按钮时，显示下一张图片。</li>
+<li>创建一个简单的文本编辑器窗体，可以打开和保存文本文件。窗体包含一个文本框用于输入和编辑文本内容，以及打开和保存按钮。
+当用户点击打开按钮时，弹出一个对话框选择要打开的文本文件，并将其内容显示在文本框中。当用户点击保存按钮时，将文本框中的内容保存到指定的文件中。</li>
+<li>创建一个简单的倒计时器窗体，可以设置倒计时时间，并显示倒计时的剩余时间。
+窗体包含一个输入框用于设置倒计时时间，一个开始按钮和一个显示剩余时间的标签。
+当用户点击开始按钮时，开始倒计时，并在标签中显示剩余时间，直到倒计时结束。</li>
+<li>创建一个简单的日历窗体，显示当前日期和时间，并允许用户选择日期。
+窗体包含一个显示当前日期和时间的标签，以及一个选择日期的日历控件。</li>
+<li>创建一个简单的笔记本应用程序窗体，可以创建、打开和保存笔记。
+窗体包含一个文本框用于输入和编辑笔记内容，以及新建、打开和保存按钮。
+当用户点击新建按钮时，清空文本框内容；当用户点击打开按钮时，弹出一个对话框选择要打开的笔记文件，并将其内容显示在文本框中；
+当用户点击保存按钮时，将文本框中的内容保存到指定的文件中。</li>
+<li>创建一个简单的待办事项列表窗体，可以添加、删除和完成待办事项。
+窗体包含一个文本框用于输入待办事项，一个添加按钮和一个待办事项列表框。
+当用户点击添加按钮时，将输入的待办事项添加到列表框中；
+当用户选中列表框中的待办事项并点击删除按钮时，删除选中的待办事项；
+当用户选中列表框中的待办事项并点击完成按钮时，将选中的待办事项标记为已完成。</li>
 </ol>
 </div>
 </div>
@@ -167,7 +183,7 @@ Winform练习题:
 </p>
 
 
-<figure id="orgc726fbe">
+<figure id="org7185de6">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
